--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 - Simplified tracking and management of crypto assets.
 
 I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!">
-<meta name="keywords" content="upwork, freelancer, Django developer, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
+  <meta name="keywords" content="victor isaac, victor, isaac, victor isaac backend, upwork, freelancer, Django developer, python, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="Portfolio" />
 <meta name="robots" content="index, follow">
@@ -374,32 +374,11 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                   <div class="copyright">
                     <p>Copyright 2024 - All right reserved</p>
                   </div>
-                  <ul class="social">
-                    <li>
-                      <a
-                        href="https://www.facebook.com/victor.isaac.7923030"
-                        target="_blank"
-                        ><i class="fab fa-facebook-f"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="https://twitter.com/IsaacVictron" target="_blank"
-                        ><i class="fab fa-twitter"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://linkedin.com/in/victor-isaac"
-                        target="_blank"
-                        ><i class="fab fa-linkedin-in"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="https://github.com/Victhereum" target="_blank"
-                        ><i class="fab fa-github"></i
-                      ></a>
-                    </li>
-                  </ul>
+              <ul class="social">
+                <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"><i class="fab fa-upwork"></i></a></li>
+                <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
+              </ul>
                 </div>
               </div>
             </footer>
