--- a/resume.html
+++ b/resume.html
@@ -1,102 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
-  <title>Victor Isaac - Python Backend Engineer | I can design and build any backend infra</title>
-  <meta charset="UTF-8">
-  <meta name="title" content="Python Backend Engineer | I can design and build any backend infra">
-  <meta name="description"
-    content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
+<title>Victor Isaac - Python Backend Engineer | I can design and build any backend infra</title>
+<meta charset="UTF-8">
+<meta name="title" content="Python Backend Engineer | I can design and build any backend infra">
+<meta name="description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!">
+  <meta name="keywords" content="victor isaac, victor, isaac, victor isaac backend, upwork, freelancer, Django developer, python, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:type" content="Portfolio" />
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta property="og:url" content="https://victherem.github.io" />
+<meta property="og:author-info" content="Victor Isaac - Python Backend Engineer | I can design and build any backend infra" />
 
-- Technical Proficiency:
-- Proficient in Python, C#, and JavaScript.
-- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
-- Strong understanding of UI/UX design principles and industry best practices.
+<meta property="og:title" content="Python Backend Engineer | I can design and build any backend infra" />
 
-- Project Highlights:
-- AI Language Learning Microservice:
-- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
-- Monero-Powered E-Commerce Platform:
-- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
-- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
-- Ensured rigorous security protocols for safe transactions.
-- Hardware Products Command Center:
-- Designed and implemented the backend service for a hardware products command center.
-- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
-- Crypto Command Center:
-- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
-- Simplified tracking and management of crypto assets.
+<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
 
-I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!">
-  <meta name="keywords"
-    content="upwork, freelancer, Django developer, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:type" content="Portfolio" />
-  <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="language" content="English">
-  <meta property="og:url" content="https://victherem.github.io" />
-  <meta property="og:author-info"
-    content="Victor Isaac - Python Backend Engineer | I can design and build any backend infra" />
+<meta property="og:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+<meta name="twitter:card" content="summary_large_image">
 
-  <meta property="og:title" content="Python Backend Engineer | I can design and build any backend infra" />
+<meta name="twitter:site" content="@__victhereum__">
 
-  <meta property="og:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
+<meta name="twitter:creator" content="@__victhereum__">
 
-  <meta property="og:description"
-    content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
+<meta name="twitter:title" content="Python Backend Engineer | I can design and build any backend infra" />
 
-- Technical Proficiency:
-- Proficient in Python, C#, and JavaScript.
-- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
-- Strong understanding of UI/UX design principles and industry best practices.
-
-- Project Highlights:
-- AI Language Learning Microservice:
-- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
-- Monero-Powered E-Commerce Platform:
-- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
-- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
-- Ensured rigorous security protocols for safe transactions.
-- Hardware Products Command Center:
-- Designed and implemented the backend service for a hardware products command center.
-- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
-- Crypto Command Center:
-- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
-- Simplified tracking and management of crypto assets.
-
-I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
-  <meta name="twitter:card" content="summary_large_image">
-
-  <meta name="twitter:site" content="@__victhereum__">
-
-  <meta name="twitter:creator" content="@__victhereum__">
-
-  <meta name="twitter:title" content="Python Backend Engineer | I can design and build any backend infra" />
-
-  <meta name="twitter:description"
-    content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
-
-- Technical Proficiency:
-- Proficient in Python, C#, and JavaScript.
-- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
-- Strong understanding of UI/UX design principles and industry best practices.
-
-- Project Highlights:
-- AI Language Learning Microservice:
-- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
-- Monero-Powered E-Commerce Platform:
-- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
-- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
-- Ensured rigorous security protocols for safe transactions.
-- Hardware Products Command Center:
-- Designed and implemented the backend service for a hardware products command center.
-- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
-- Crypto Command Center:
-- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
-- Simplified tracking and management of crypto assets.
-
-I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+<meta name="twitter:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
 
   <meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
   <link rel="canonical" href="https://victhereum.github.io/resume.html" />
@@ -175,6 +106,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 timeline-item clip-animation from-top"
                   data-duration="1.5">
                   <div class="timeline-outer">
+                    <a href="https://www.amihub.africa/" target="_blank"><img style="width: 50px; height:50px"  src="https://media.licdn.com/dms/image/D4D0BAQGL5pDdknfqdg/company-logo_200_200/0/1690717596978?e=1726704000&v=beta&t=SznLK9vDf1hifI_DaJQybZaz-73klLVv1vULBlOStf8" alt="Africa Manufacturing Innovation Hub" /></a><br>
                     <span class="mini-text">Nov 2022 - Present</span>
                     <h5>Senior Software Engineer | Africa Manufacturing Innovation Hub</h5>
                     <p class="little-p">As a Senior Backend Engineer at the Africa Manufacturing Innovation Hub, I am at
@@ -198,6 +130,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                   class="col-xl-6 offset-xl-6 col-lg-6 offset-lg-6 col-md-6 offset-md-6 col-sm-12 timeline-item  clip-animation from-top"
                   data-duration="1.5"=".4">
                   <div class="timeline-outer">
+                    <a href="https://www.learngual.com/" target="_blank"><img style="width: 50px; height:50px" src="https://media.licdn.com/dms/image/C560BAQEtcdIuhpcKuw/company-logo_200_200/0/1677699817138/learngual_logo?e=1726704000&v=beta&t=FY2FdFRh9itVJyw_wFY084bOc8FGQtSb7egkG8ebij4" alt="Learngual Inc" /></a><br>
                     <span class="mini-text">Jan 2023 - May 2024</span>
                     <h5>Software Engineer | Learngual Inc</h5>
                     <p class="little-p">
@@ -221,6 +154,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 timeline-item clip-animation from-top"
                   data-duration="1.5"=".8">
                   <div class="timeline-outer">
+                    <a href="https://www.ecclesit.co.uk/" target="_blank"><img style="width: 50px; height:50px" src="https://media.licdn.com/dms/image/C4E0BAQHcWNexUUxoVQ/company-logo_200_200/0/1630640176247/eccles_it_ltd_logo?e=1726704000&v=beta&t=OFR21tOOfOUl1Q8hd18DHsg1tWE5vj5Qu8S_T3a6a20" alt="Eccles IT LTD" /></a><br>
                     <span class="mini-text">Nov 2021 - Mar 2023</span>
                     <h5>Software Engineer | Eccles IT LTD</h5>
                     <p class="little-p">
@@ -349,20 +283,19 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                         </li>
                         <li>
                           <div class="bar-info">
-                            <h3>.NET Core</h3>
-                            <i><img src="https://img.icons8.com/fluency-systems-filled/24/ffb400/asp.png" /></i>
-                            <span>50%</span>
+                            <h3>Django Rest Framework</h3>
+                            <i style="color: #ffb400;">DRF</i>
+                            <span>100%</span>
                           </div>
                           <div class="progress">
-                            <div class="percentage" data-percent="50%"></div>
+                            <div class="percentage" data-percent="100%"></div>
                           </div>
                         </li>
                         <li>
                           <div class="bar-info">
-                            <h3>Brownie</h3>
-                            <img style="width: 18px; height: 18;"
-                              src="https://avatars.githubusercontent.com/u/55654090?s=200&v=4" alt="" srcset="">
-                            <span>34%</span>
+                            <h3>Bootstrap</h3>
+                            <i class="fab fa-bootstrap" style="color: #ffb400;"></i>
+                            <span>70%</span>
                           </div>
                           <div class="progress">
                             <div class="percentage" data-percent="34%"></div>
@@ -384,7 +317,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                             <span>100%</span>
                           </div>
                           <div class="progress">
-                            <div class="percentage" data-percent="80%"></div>
+                            <div class="percentage" data-percent="100%"></div>
                           </div>
                         </li>
                         <li>
@@ -401,10 +334,10 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                             <h3>Cloud Computing/Hosting</h3>
                             <img src="https://img.icons8.com/ios-filled/18/ffb400/heroku.png" />
                             <img src="https://img.icons8.com/ios-filled/18/ffb400/digitalocean.png" />
-                            <span>50%</span>
+                            <span>80%</span>
                           </div>
                           <div class="progress">
-                            <div class="percentage" data-percent="50%"></div>
+                            <div class="percentage" data-percent="80%"></div>
                           </div>
                         </li>
                       </ul>
@@ -423,20 +356,9 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                     <p>Copyright 2024 - All right reserved</p>
                   </div>
                   <ul class="social">
-                    <li>
-                      <a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i
-                          class="fab fa-facebook-f"></i></a>
-                    </li>
-                    <li>
-                      <a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li>
-                      <a href="https://linkedin.com/in/victor-isaac" target="_blank"><i
-                          class="fab fa-linkedin-in"></i></a>
-                    </li>
-                    <li>
-                      <a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a>
-                    </li>
+                    <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"><i class="fab fa-upwork"></i></a></li>
+                    <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
                   </ul>
                 </div>
               </div>
