--- a/work-2.html
+++ b/work-2.html
@@ -258,10 +258,9 @@ of experience using various programming languages and web frameworks to
                     <p>Copyright 2024 - All right reserved</p>
                   </div>
                   <ul class="social">
-                <li><a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"><i class="fab fa-upwork"></i></a></li>
+                    <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
                   </ul>
                 </div>
               </div>
