--- a/index.html
+++ b/index.html
@@ -4,29 +4,8 @@
 <title>Victor Isaac - Python Backend Engineer | I can design and build any backend infra</title>
 <meta charset="UTF-8">
 <meta name="title" content="Python Backend Engineer | I can design and build any backend infra">
-<meta name="description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
-
-- Technical Proficiency:
-- Proficient in Python, C#, and JavaScript.
-- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
-- Strong understanding of UI/UX design principles and industry best practices.
-
-- Project Highlights:
-- AI Language Learning Microservice:
-- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
-- Monero-Powered E-Commerce Platform:
-- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
-- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
-- Ensured rigorous security protocols for safe transactions.
-- Hardware Products Command Center:
-- Designed and implemented the backend service for a hardware products command center.
-- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
-- Crypto Command Center:
-- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
-- Simplified tracking and management of crypto assets.
-
-I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!">
-<meta name="keywords" content="upwork, freelancer, Django developer, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
+<meta name="description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!">
+  <meta name="keywords" content="victor isaac, victor, isaac, victor isaac backend, upwork, freelancer, Django developer, python, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="Portfolio" />
 <meta name="robots" content="index, follow">
@@ -39,28 +18,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 
 <meta property="og:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
 
-<meta property="og:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
-
-- Technical Proficiency:
-- Proficient in Python, C#, and JavaScript.
-- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
-- Strong understanding of UI/UX design principles and industry best practices.
-
-- Project Highlights:
-- AI Language Learning Microservice:
-- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
-- Monero-Powered E-Commerce Platform:
-- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
-- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
-- Ensured rigorous security protocols for safe transactions.
-- Hardware Products Command Center:
-- Designed and implemented the backend service for a hardware products command center.
-- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
-- Crypto Command Center:
-- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
-- Simplified tracking and management of crypto assets.
-
-I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+<meta property="og:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
 <meta name="twitter:card" content="summary_large_image">
 
 <meta name="twitter:site" content="@__victhereum__">
@@ -69,28 +27,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 
 <meta name="twitter:title" content="Python Backend Engineer | I can design and build any backend infra" />
 
-<meta name="twitter:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
-
-- Technical Proficiency:
-- Proficient in Python, C#, and JavaScript.
-- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
-- Strong understanding of UI/UX design principles and industry best practices.
-
-- Project Highlights:
-- AI Language Learning Microservice:
-- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
-- Monero-Powered E-Commerce Platform:
-- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
-- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
-- Ensured rigorous security protocols for safe transactions.
-- Hardware Products Command Center:
-- Designed and implemented the backend service for a hardware products command center.
-- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
-- Crypto Command Center:
-- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
-- Simplified tracking and management of crypto assets.
-
-I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+<meta name="twitter:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
 
 <meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
 <link rel="canonical" href="https://victhereum.github.io/index.html" />
@@ -168,7 +105,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
             </div>
             <div class="social-links clip-animation">
               <ul>
-                <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"><i class="fab fa-upwork"></i></a></li>
+                <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"><i class="fab fa-upwork fa-beat"></i></a></li>
                 <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
               </ul>
@@ -188,7 +125,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                     class="fa-brands fa-whatsapp"></i> <span>+2348-1102-58156</span></a></li>
               <li class="col-xl-4 col-lg-6"> <a target="_blank" href="mailto:tamsvictorisaac@outlook.com"><i
                     class="fa-solid fa-at"></i> <span>outlook.com</span></a></li>
-              <li class="col-xl-4 col-lg-6"> <a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"> <i class="fab fa-upwork"></i> <span>Upwork Me</span></a></li>
+              <li class="col-xl-4 col-lg-6"> <a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"> <i class="fab fa-upwork fa-bounce"></i> <span>Upwork Me</span></a></li>
             </ul>
           </div>
         </div>
@@ -197,7 +134,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
           As an accomplished Django Backend and Fullstack developer with 7 years of experience, I specialize in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success.
         </p>
         <div class="spacer-15"></div>
-        <p>I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!</p>
+        <p class="clip-animation" data-delay="1.2">I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!</p>
         <!-- download cv-->
          <div class="spacer-45"></div>
        <div class="col-xl-12 text-center">
@@ -256,9 +193,12 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
           </div>
           <p>I can build your backend business logic and serve them via REST APIs
             <br>
-            <i class="fab fa-elementor" style="color: #ffb400;"></i>
-            <i class="fab fa-wpforms" style="color: #ffb400;" ></i>
-            <i><img src="https://img.icons8.com/material-rounded/18/ffb400/woocommerce.png"/></i>
+            <i class="fab fa-python" style="color: #ffb400;"></i>
+            <i class="fab fa-docker" style="color: #ffb400;" ></i>
+            <i class="fa fa-code" style="color: #ffb400;" ></i>
+            <i class="fa fa-api" style="color: #ffb400;" ></i>
+            <i class="fa-solid fa-server" style="color: #ffb400;" ></i>
+            <i class="fa-solid fa-database" style="color: #ffb400;" ></i>
           </p>
           </div>          
       </section>
@@ -274,7 +214,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
           <!-- a comment -->
           <div class="swiper-slide">
             <div class="left">
-              <i class="flaticon-right-quote"></i>
+              <i class="fa-solid fa-quote-left fa-bounce"></i>
             </div>
             <div class="right">
               <p class="little-p">Victor understands and knows how to take your idea and make it into
@@ -290,7 +230,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
           <!-- a comment -->
           <div class="swiper-slide">
             <div class="left">
-              <i class="flaticon-right-quote"></i>
+              <i class="fa-solid fa-quote-left fa-bounce"></i>
             </div>
             <div class="right">
               <p class="little-p">I was having only a rough sketch of what I wanted build when I reached out to Victor,
@@ -306,7 +246,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
           <!-- a comment -->
           <div class="swiper-slide">
             <div class="left">
-              <i class="flaticon-right-quote"></i>
+              <i class="fa-solid fa-quote-left fa-bounce"></i>
             </div>
             <div class="right">
               <p class="little-p">Victor knows his craft, and does it passionately, put's his client's satisfaction first, loves clean and maintanable codebase. Simply pure talent</p>
@@ -327,10 +267,10 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
     <!-- clients -->
     <div class="client-slider">
       <ul class="bxslider">
-        <li><img  src="images/clients/agromatic.png" alt="" /></li>
-        <li><img src="images/clients/Feron.png" alt="" /></li>
-        <li><img  src="images/clients/sureseis.png" alt="" /></li>
-        <li><img style="width: 50px ; height:50px" src="images/clients/kcl.png" alt="" /></li>
+        <li><a href="https://www.aritekconsulting.com/" target="_blank"><img style="width: 50px; height:50px"  src="https://www.aritekconsulting.com/assets/images/logos/logo-md.png" alt="Aritek Consulting" /></a></li>
+        <li><a href="https://www.ecclesit.co.uk/" target="_blank"><img style="width: 50px; height:50px" src="https://media.licdn.com/dms/image/C4E0BAQHcWNexUUxoVQ/company-logo_200_200/0/1630640176247/eccles_it_ltd_logo?e=1726704000&v=beta&t=OFR21tOOfOUl1Q8hd18DHsg1tWE5vj5Qu8S_T3a6a20" alt="Eccles IT LTD" /></a></li>
+        <li><a href="https://www.amihub.africa/" target="_blank"><img style="width: 50px; height:50px"  src="https://media.licdn.com/dms/image/D4D0BAQGL5pDdknfqdg/company-logo_200_200/0/1690717596978?e=1726704000&v=beta&t=SznLK9vDf1hifI_DaJQybZaz-73klLVv1vULBlOStf8" alt="Africa Manufacturing Innovation Hub" /></a></li>
+        <li><a href="https://www.learngual.com/" target="_blank"><img style="width: 50px; height:50px" src="https://media.licdn.com/dms/image/C560BAQEtcdIuhpcKuw/company-logo_200_200/0/1677699817138/learngual_logo?e=1726704000&v=beta&t=FY2FdFRh9itVJyw_wFY084bOc8FGQtSb7egkG8ebij4" alt="Learngual Inc" /></a></li>
       </ul>
     </div>
     </div> <!-- page wrapper end -->
@@ -343,8 +283,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                 <p>Copyright 2024 - All right reserved</p>
               </div>
               <ul class="social">
-                <li><a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"><i class="fab fa-upwork"></i></a></li>
                 <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
               </ul>
