--- a/work-1.html
+++ b/work-1.html
@@ -34,7 +34,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 
 I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
 
-<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
+<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.png" />
     <link rel="canonical" href="https://victhereum.github.io/work-1.html" />
     <!-- Favicon -->
     <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
@@ -65,7 +65,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
     <div id="loader" class="preloader">
       <div class="loading">
         <div class="profile-image">
-          <img src="images/profile-loader.jpg" alt="" />
+          <img src="images/profile-loader.png" alt="" />
           <svg
             style="position: absolute"
             width="100px"
