--- a/work-2.html
+++ b/work-2.html
@@ -15,7 +15,7 @@
 
 <meta property="og:title" content="I develop for the web" />
 
-<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
+<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.png" />
 
 <meta property="og:description" content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
 of experience using various programming languages and web frameworks to
@@ -41,7 +41,7 @@ of experience using various programming languages and web frameworks to
    C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
     including development platforms and security requirements." />
 
-<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
+<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.png" />
 <link rel="canonical" href="https://victhereum.github.io/work-2.html" />
 
     <!-- Favicon -->
@@ -73,7 +73,7 @@ of experience using various programming languages and web frameworks to
     <div id="loader" class="preloader">
       <div class="loading">
         <div class="profile-image">
-          <img src="images/profile-loader.jpg" alt="" />
+          <img src="images/profile-loader.png" alt="" />
           <svg
             style="position: absolute"
             width="100px"
