--- a/work-8.html
+++ b/work-8.html
@@ -37,7 +37,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 
 <meta property="og:title" content="Python Backend Engineer | I can design and build any backend infra" />
 
-<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
+<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.png" />
 
 <meta property="og:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
 
@@ -92,7 +92,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 
 I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
 
-<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
+<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.png" />
     <!-- Favicon -->
     <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
@@ -121,7 +121,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
     <div id="loader" class="preloader">
       <div class="loading">
         <div class="profile-image">
-          <img src="images/profile-loader.jpg" alt="" />
+          <img src="images/profile-loader.png" alt="" />
           <svg
             style="position: absolute"
             width="100px"
