--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <ul>
               <li><a class="active" href="index.html">Home</a></li>
               <li><a href="resume.html">Resume</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share">Portfolio</a></li>
               <!-- <li><a href="blog.html">Blog</a></li> -->
               <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -158,13 +158,13 @@
           </div>
           <p>
             I build highly secured, maintainable and scalebale web apps, and can serve as a backend and fullstack web developer<br>
-            <i class="fab fa-python" style="color: #ffb400;"></i>
-            <i><img src="https://img.icons8.com/ios-filled/18/ffb400/c-sharp-logo.png"/></i>
-            <i class="fab fa-js-square" style="color: #ffb400;"></i>
-            <i><img src="https://img.icons8.com/material-outlined/18/ffb400/django.png"/></i>
-            <i><img src="https://img.icons8.com/fluency-systems-filled/24/ffb400/asp.png"/></i>
-            <i class="fab fa-html5" style="color: #ffb400;"></i>
-            <i class="fab fa-css3" style="color: #ffb400;"></i>
+            <i class="fab fa-python" style="color: #e6ff00;"></i>
+            <i><img src="https://img.icons8.com/ios-filled/18/e6ff00/c-sharp-logo.png"/></i>
+            <i class="fab fa-js-square" style="color: #e6ff00;"></i>
+            <i><img src="https://img.icons8.com/material-outlined/18/e6ff00/django.png"/></i>
+            <i><img src="https://img.icons8.com/fluency-systems-filled/24/e6ff00/asp.png"/></i>
+            <i class="fab fa-html5" style="color: #e6ff00;"></i>
+            <i class="fab fa-css3" style="color: #e6ff00;"></i>
           </p>
           </div>
           <!-- a service -->
@@ -175,14 +175,14 @@
           </div>
           <p>
             I can design your system architectture based on your software requirements, and can build your software from scratch<br>
-             <i class="fab fa-python" style="color: #ffb400;"></i>
-             <i><img src="https://img.icons8.com/?size=18&id=25010&format=png&color=ffb400"/></i>
-             <i><img src="https://img.icons8.com/?size=18&id=dmAy2s25QyTr&format=png&color=ffb400"/></i>
-             <i><img src="https://img.icons8.com/?size=18&id=22797&format=png&color=ffb400"/></i>
-             <i><img src="https://img.icons8.com/?size=18&id=VoXRGxL3ekkk&format=png&color=ffb400"/></i>
-             <i><img src="https://img.icons8.com/?size=18&id=25692&format=png&color=ffb400"/></i>
+             <i class="fab fa-python" style="color: #e6ff00;"></i>
+             <i><img src="https://img.icons8.com/?size=18&id=25010&format=png&color=e6ff00"/></i>
+             <i><img src="https://img.icons8.com/?size=18&id=dmAy2s25QyTr&format=png&color=e6ff00"/></i>
+             <i><img src="https://img.icons8.com/?size=18&id=22797&format=png&color=e6ff00"/></i>
+             <i><img src="https://img.icons8.com/?size=18&id=VoXRGxL3ekkk&format=png&color=e6ff00"/></i>
+             <i><img src="https://img.icons8.com/?size=18&id=25692&format=png&color=e6ff00"/></i>
              <i><img src="https://img.icons8.com/?size=18&id=61959&format=png&color=FAB005"/></i>
-             <i style="color: #ffb400;">render</i>
+             <i style="color: #e6ff00;">render</i>
           </p>
           </div>
           <!-- a service -->
@@ -193,12 +193,12 @@
           </div>
           <p>I can build your backend business logic and serve them via REST APIs
             <br>
-            <i class="fab fa-python" style="color: #ffb400;"></i>
-            <i class="fab fa-docker" style="color: #ffb400;" ></i>
-            <i class="fa fa-code" style="color: #ffb400;" ></i>
-            <i class="fa fa-api" style="color: #ffb400;" ></i>
-            <i class="fa-solid fa-server" style="color: #ffb400;" ></i>
-            <i class="fa-solid fa-database" style="color: #ffb400;" ></i>
+            <i class="fab fa-python" style="color: #e6ff00;"></i>
+            <i class="fab fa-docker" style="color: #e6ff00;" ></i>
+            <i class="fa fa-code" style="color: #e6ff00;" ></i>
+            <i class="fa fa-api" style="color: #e6ff00;" ></i>
+            <i class="fa-solid fa-server" style="color: #e6ff00;" ></i>
+            <i class="fa-solid fa-database" style="color: #e6ff00;" ></i>
           </p>
           </div>          
       </section>
