--- a/onepage.html
+++ b/onepage.html
@@ -697,7 +697,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                             <div
                               class="chart"
                               data-percent="92"
-                              data-scale-color="#ffb400"
+                              data-scale-color="#e6ff00"
                             >
                               <span class="percent">92</span>
                             </div>
@@ -712,7 +712,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                             <div
                               class="chart"
                               data-percent="70"
-                              data-scale-color="#ffb400"
+                              data-scale-color="#e6ff00"
                             >
                               <span class="percent">70</span>
                             </div>
@@ -727,7 +727,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                             <div
                               class="chart"
                               data-percent="30"
-                              data-scale-color="#ffb400"
+                              data-scale-color="#e6ff00"
                             >
                               <span class="percent">60</span>
                             </div>
@@ -742,7 +742,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                             <div
                               class="chart"
                               data-percent="10"
-                              data-scale-color="#ffb400"
+                              data-scale-color="#e6ff00"
                             >
                               <span class="percent">10</span>
                             </div>
