--- a/portfolio.html
+++ b/portfolio.html
@@ -173,7 +173,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                       <li><a href="index.html">Home</a></li>
                       <li><a href="resume.html">Resume</a></li>
                       <li>
-                        <a class="active" href="portfolio.html">Portfolio</a>
+                        <a class="active" href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share">Portfolio</a>
                       </li>
                       <!-- <li><a href="blog.html">Blog</a></li> -->
                       <li><a href="contact.html">Contact</a></li>
