--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
                   <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a class="active" href="resume.html">Resume</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share">Portfolio</a></li>
                     <!-- <li><a href="blog.html">Blog</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
                   </ul>
@@ -222,38 +222,38 @@
                     <div class="col-xl-11 col-lg-11 col-md-11 col-sm-11 col-11">
                       <div class="row">
                         <div class="pie-chart col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 classic-animation"=".5">
-                          <div class="chart" data-percent="92" data-scale-color="#ffb400">
+                          <div class="chart" data-percent="92" data-scale-color="#e6ff00">
                             <span class="percent">99</span>
                           </div>
                           <div class="skills-description">
-                            <i class="fa-brands fa-python" style="color: #ffb400;"></i>
+                            <i class="fa-brands fa-python" style="color: #e6ff00;"></i>
                             <h6>Python</h6>
                           </div>
                         </div>
                         <div class="pie-chart col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 classic-animation"=".6">
-                          <div class="chart" data-percent="47" data-scale-color="#ffb400">
+                          <div class="chart" data-percent="47" data-scale-color="#e6ff00">
                             <span class="percent">47</span>
                           </div>
                           <div class="skills-description">
-                            <i><img src="https://img.icons8.com/ios-filled/18/ffb400/c-sharp-logo.png" /></i>
+                            <i><img src="https://img.icons8.com/ios-filled/18/e6ff00/c-sharp-logo.png" /></i>
                             <h6>C#</h6>
                           </div>
                         </div>
                         <div class="pie-chart col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 classic-animation"=".6">
-                          <div class="chart" data-percent="83" data-scale-color="#ffb400">
+                          <div class="chart" data-percent="83" data-scale-color="#e6ff00">
                             <span class="percent">83</span>
                           </div>
                           <div class="skills-description">
-                            <i><img src="https://img.icons8.com/ios-filled/18/ffb400/solidity.png" /></i>
+                            <i><img src="https://img.icons8.com/ios-filled/18/e6ff00/solidity.png" /></i>
                             <h6>Solidity</h6>
                           </div>
                         </div>
                         <div class="pie-chart col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 classic-animation"=".7">
-                          <div class="chart" data-percent="60" data-scale-color="#ffb400">
+                          <div class="chart" data-percent="60" data-scale-color="#e6ff00">
                             <span class="percent">60</span>
                           </div>
                           <div class="skills-description">
-                            <i style="color: #ffb400;" class="fa-brands fa-js-square"></i>
+                            <i style="color: #e6ff00;" class="fa-brands fa-js-square"></i>
                             <h6>JavaScript</h6>
                           </div>
                         </div>
@@ -273,7 +273,7 @@
                       <ul class="skill-list">
                         <li>
                           <div class="bar-info">
-                            <i><img src="https://img.icons8.com/material-outlined/18/ffb400/django.png" /></i>
+                            <i><img src="https://img.icons8.com/material-outlined/18/e6ff00/django.png" /></i>
                             <h3>Django</h3>
                             <span>100%</span>
                           </div>
@@ -284,7 +284,7 @@
                         <li>
                           <div class="bar-info">
                             <h3>Django Rest Framework</h3>
-                            <i style="color: #ffb400;">DRF</i>
+                            <i style="color: #e6ff00;">DRF</i>
                             <span>100%</span>
                           </div>
                           <div class="progress">
@@ -294,7 +294,7 @@
                         <li>
                           <div class="bar-info">
                             <h3>Bootstrap</h3>
-                            <i class="fab fa-bootstrap" style="color: #ffb400;"></i>
+                            <i class="fab fa-bootstrap" style="color: #e6ff00;"></i>
                             <span>70%</span>
                           </div>
                           <div class="progress">
@@ -312,8 +312,8 @@
                         <li>
                           <div class="bar-info">
                             <h3>Git/Github</h3>
-                            <img src="https://img.icons8.com/ios-filled/18/ffb400/git.png" />
-                            <img src="https://img.icons8.com/ios-glyphs/18/ffb400/github.png" />
+                            <img src="https://img.icons8.com/ios-filled/18/e6ff00/git.png" />
+                            <img src="https://img.icons8.com/ios-glyphs/18/e6ff00/github.png" />
                             <span>100%</span>
                           </div>
                           <div class="progress">
@@ -332,8 +332,8 @@
                         <li>
                           <div class="bar-info">
                             <h3>Cloud Computing/Hosting</h3>
-                            <img src="https://img.icons8.com/ios-filled/18/ffb400/heroku.png" />
-                            <img src="https://img.icons8.com/ios-filled/18/ffb400/digitalocean.png" />
+                            <img src="https://img.icons8.com/ios-filled/18/e6ff00/heroku.png" />
+                            <img src="https://img.icons8.com/ios-filled/18/e6ff00/digitalocean.png" />
                             <span>80%</span>
                           </div>
                           <div class="progress">
