--- a/work-2.html
+++ b/work-2.html
@@ -122,7 +122,7 @@ of experience using various programming languages and web frameworks to
                     <ul>
                       <li><a href="index.html">Home</a></li>
                       <li><a href="resume.html">Resume</a></li>
-                      <li><a href="portfolio.html">Portfolio</a></li>
+                      <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share">Portfolio</a></li>
                       <!-- <li><a href="blog.html">Blog</a></li> -->                      <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </nav>
@@ -226,7 +226,7 @@ of experience using various programming languages and web frameworks to
                     <div class="text">Prev Case</div></a
                   >
 
-                  <a class="case" href="portfolio.html">
+                  <a class="case" href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share">
                     <svg
                       id="Object"
                       height="16"
