--- a/blog.html
+++ b/blog.html
@@ -107,7 +107,7 @@
                     <ul>
                       <li><a href="index.html">Home</a></li>
                       <li><a href="resume.html">Resume</a></li>
-                      <li><a href="portfolio.html">Portfolio</a></li>
+                      <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share">Portfolio</a></li>
                       <li><a class="active" href="blog.html">Blog</a></li>
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
