--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                     <ul>
                       <li><a href="index.html">Home</a></li>
                       <li><a href="resume.html">Resume</a></li>
-                      <li><a href="portfolio.html">Portfolio</a></li>
+                      <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share">Portfolio</a></li>
                       <!-- <li><a href="blog.html">Blog</a></li> -->
                       <li><a class="active" href="contact.html">Contact</a></li>
                     </ul>
@@ -134,13 +134,13 @@
                     <!-- contact info -->
                     <div class="col-xl-5 scale-animation" data-duration="2">
                       <div class="contact-info address">
-                        <a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"> <i class="fab fa-upwork fa-bounce" style="color: #ffb400;"></i> <span>Upwork Me</span></a>
+                        <a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"> <i class="fab fa-upwork fa-bounce" style="color: #e6ff00;"></i> <span>Upwork Me</span></a>
                       </div>
                       <div class="contact-info email">
                         <p class="little-p info-title">Write me</p>
-                        <i class="fa-solid fa-at fa-shake" style="color: #ffb400;"></i><a href="mailto:tamsvictorisaac@outlook.com"> tamsvictorisaac@outlook.com</a>
+                        <i class="fa-solid fa-at fa-shake" style="color: #e6ff00;"></i><a href="mailto:tamsvictorisaac@outlook.com"> tamsvictorisaac@outlook.com</a>
                         <br>
-                        <i class="fa-solid fa-at fa-shake" style="color: #ffb400;"></i><a href="mailto:tamsvictorisaac@gmail.com"> tamsvictorisaac@gmail.com</a>
+                        <i class="fa-solid fa-at fa-shake" style="color: #e6ff00;"></i><a href="mailto:tamsvictorisaac@gmail.com"> tamsvictorisaac@gmail.com</a>
                       </div>
                       <div class="contact-info social">
                         <p class="little-p info-title">Reach me</p>
