--- a/work-5.html
+++ b/work-5.html
@@ -173,7 +173,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                     <ul>
                       <li><a href="index.html">Home</a></li>
                       <li><a href="resume.html">Resume</a></li>
-                      <li><a href="portfolio.html">Portfolio</a></li>
+                      <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share">Portfolio</a></li>
                       <!-- <li><a href="blog.html">Blog</a></li> -->
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -286,7 +286,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
                     <div class="text">Prev Case</div></a
                   >
 
-                  <a class="case" href="portfolio.html">
+                  <a class="case" href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share">
                     <svg
                       id="Object"
                       height="16"
